--- a/html/modal3.html
+++ b/html/modal3.html
@@ -18,7 +18,61 @@
   </head>
   <body>
     <!-- Button trigger modal -->
+    <nav class="navbar navbar-expand-lg navbar-light">
+<a class="navbar-brand" href="#"><img src = "images/logo.png"/></a>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+<div class="collapse navbar-collapse" id="navbarNavDropdown">
+<ul class="navbar-nav">
+  <li class="nav-item active">
+    <a class="nav-link" href="home.html">Home<span class="sr-only">(current)</span></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="webpages/academics.html">Academics</a>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Chapters
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      <a class="dropdown-item" href="webpages/seattle/seattle-chapter.html">Seattle Chapter</a>
+      <a class="dropdown-item" href="webpages/bay/bay-chapter.html">Bay Area</a>
+      <a class="dropdown-item" href="webpages/kansas/kansas-chapter.html">Kansas City</a>
+      <a class = "dropdown-item" href = "webpages/create-chapter.html">Create a Chapter</a>
+    </div>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="../volunteers.html" id="navbarDropdownMenuLink" data-toggle = "dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+      Volunteers
+    </a>
+    <div class="dropdown-menu myLinkedDropdown" aria-labelledby="navbarDropdownMenuLink">
+      <a class = "dropdown-item" href = "webpages/leadership.html">Leadership Team</a>
+      <a class="dropdown-item" href="webpages/seattle/seattle-volunteers.html">Seattle</a>
+      <a class="dropdown-item" href="webpages/bay/bay-volunteers.html">Bay Area</a>
+      <a class="dropdown-item" href="webpages/kansas/kansas-volunteers.html">Kansas City</a>
+      <a class="dropdown-item" href="webpages/alumni.html">Alumni</a>
 
+    </div>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="webpages/charity.html">Charity</a>
+  </li>
+  <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      More
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+      <a class="dropdown-item" href="webpages/blog.html">Blog</a>
+      <a class="dropdown-item" href="webpages/competitions.html">Competitions</a>
+    </div>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="webpages/contact.html">Contact Us</a>
+  </li>
+</ul>
+</div>
+</nav>
     <!-- Modal -->
     <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
       <div class="modal-dialog modal-dialog-centered" role="document">
